# spatialvaes

./: .gitignore  README.md  dataset.py  encode_dataset.py  experiment_utils.py  pyproject.toml  train_ae.py  train_regressor.py  train_renderer.py  train_vae.py
spatialvaes/: aes.py  decoders.py  encoders.py  layers.py  regressors.py  renderer.py  vaes.py
